test/zinc_source/compile_errors/callables/07_lambda_capture_nested_local.zn
// expected-error: lambda expressions cannot capture outer variable 'y'
fn main() {
    if true {
        y = 2
        f = fn() {
            return y
        }
        print(f())
    }
}
